# fsrest

./: .gitignore  Headers.hs  LICENSE  Main.hs  Makefile  Media.hs  Negotiation.hs  Process.hs  README  README.markdown  SCGI.hs  TODO  default.nix  dirrest.cabal  dirrest.hs  flake.nix  fsrest.cabal  fsrest.hs  module.nix
example/localhost/: text.html
example/localhost/comments/: DELETE  POST  PUT
example/localhost/time/: text.html
