Name:          fsrest
Version:       0.4.0
Cabal-Version: >= 1.2
License:       MIT
License-File:  LICENSE
Copyright:     2012, 2013, 2014, 2015 Chris Forno
Author:        Chris Forno (jekor)
Maintainer:    jekor@jekor.com
Bug-Reports:   jekor@jekor.com
Homepage:      https://github.com/jekor/fsrest
Package-URL:   https://github.com/jekor/fsrest/zipball/master
Category:      Web
Synopsis:      filesystem-based RESTful HTTP server
Description:   fsrest is a webserver that encourages and assists with RESTful website/service design, provides pretty URLs for static files, and enables dynamic sites without databases
Tested-With:   GHC == 7.10.2
Build-Type:    Simple
Data-Files:    module.nix

Executable fsrest
  Main-Is:       Main.hs
  Build-Depends: base >= 4,
                 attoparsec,
                 bytestring,
                 case-insensitive,
                 deepseq,
                 directory,
                 filepath,
                 http-kit >= 0.5,
                 http-types,
                 Glob,
                 network >= 2.6,
                 network-uri,
                 parsec,
                 process,
                 text,
                 transformers,
                 unix,
                 utf8-string
  Extensions:    OverloadedStrings
  GHC-Options:   -Wall -fno-warn-missing-signatures -fno-warn-type-defaults -fno-warn-unused-do-bind -threaded -O2
